add City for module2

--- a/app/assets/javascripts/spa-demo/app.constant.js.erb
+++ b/app/assets/javascripts/spa-demo/app.constant.js.erb
@@ -6,7 +6,8 @@
     .constant("spa-demo.APP_CONFIG",{
     	server_url: "<%= ENV['RAILS_API_URL'] %>",
     	main_page_html:"<%= asset_path('spa-demo/pages/main.html') %>",
-    	foos_html: "<%= asset_path('spa-demo/foos/foos.html') %>"
+    	foos_html: "<%= asset_path('spa-demo/foos/foos.html') %>",
+    	cities_html: "<%= asset_path('spa-demo/cities/cities.html') %>"
     });
 
 })();
